# ART-CoreEngine

./: .gitignore  .gitmodules  AI_Taxonomy.py  CMM_lexer.l  DATASETS.md  DatabaseManager.py  PROMPTS.md  ProgramAnalyzer.py  README.md  __init__.py  api_storage.csv  api_storage.db  batchProcessing.py  battleship.java  chatgpt.py  csv_pull.py  csv_push.py  database.py  database_init.py  example_external.py  file_data.csv  file_data.db  function_storage.csv  function_storage.db  generateAST.py  github_pull.py  identifiers.py  main.py  onClone.sh  on_clone.sh  program_analyzer.py  pyproject.toml  simpleClass.java  store_result.py  subdomain_labels.json  symbolTable.py  test.java  tokens.py
ART Team/: AI_Taxonomy.py  GetDomains.py  test.json
ART Team (old)/: GetDomains.py
data/: domain_labels.json  formatted_domain_labels.json  gpt_models.json  subdomain_labels.json
docs/: training_domains.md
docs/repo-extractor/: README.md
generatedFiles/: ai_result_backup.db  api_storage.csv  file_data.csv  function_storage.csv  issues_data2 test.csv
input/: config_example.json
samples/: AutosaveManager.java  ClipBoardManager.java  CrossRef.java  DefaultLatexParser.java  DefaultTexParserTest.java  Functionality.js  Scheduling.c  TimerUI.cs
src/: AI_Taxonomy.py  DatabaseManager.py  __init__.py  ai_taxonomy.py  classifier.py  csv_pull.py  csv_push.py  database_init.py  database_manager.py  external.py  external_file.py  generateAST.py  generate_ast.py  github_pull.py  identifiers.py  issue_class.py  java_ast.py  open_issue_classification.py  processing.py  python_ast.py  store_result.py  symbol_table.py  test.py  tokens.py
src/repo_extractor/: __init__.py  database_init.py  database_manager.py  extractor.py  schema.py
src/setup/: gpt_model.pkl  (+1 more)
tree-sitter-java/: libtree-sitter-.0.0.dylib  libtree-sitter-java.dylib  libtree-sitter-java.so.0.0  libtree-sitter-java.{shared_library_extension}
tree-sitter-python/: libtree-sitter-python.dylib  tree-sitter-python.pc
(+14 files in other folders)
