[tool.poetry]
name = "art-coreengine"
version = "0.1.0"
description = ""
authors = [
    "Benjamin Carter",
    "Dylan Johnson",
    "Hunter Jenkins",
    "Jacob McAuley Penney <jacobmpenney@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"

tree-sitter = "0.22.3"
tree-sitter-java = "^0.21"

cerberus = "1.3.4"
openai = "~1.33"
pygithub = "1.57"
python-dotenv = "1.0.1"
requests = "~2.32"
tiktoken = "~0.7"
tqdm = "~4.66"
joblib = "~1.4"
numpy = "~1.26"
emoji = "~2.12.1"
pandas = "~2.2"
scikit-learn = "~1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
